// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/store/variants /test-variant 1`] = `
Object {
  "variant": Object {
    "allow_backorder": false,
    "barcode": "test-barcode",
    "created_at": Any<String>,
    "deleted_at": null,
    "ean": "test-ean",
    "height": null,
    "hs_code": null,
    "id": "test-variant",
    "inventory_quantity": 10,
    "length": null,
    "manage_inventory": true,
    "material": null,
    "metadata": null,
    "mid_code": null,
    "options": Array [
      Object {
        "created_at": Any<String>,
        "deleted_at": null,
        "id": "test-variant-option",
        "metadata": null,
        "option_id": "test-option",
        "updated_at": Any<String>,
        "value": "Default variant",
        "variant_id": "test-variant",
      },
    ],
    "origin_country": null,
    "prices": Array [
      Object {
        "amount": 100,
        "created_at": Any<String>,
        "currency_code": "usd",
        "deleted_at": null,
        "id": "test-price",
        "max_quantity": null,
        "min_quantity": null,
        "price_list_id": null,
        "region_id": null,
        "updated_at": Any<String>,
        "variant_id": "test-variant",
      },
    ],
    "product": Any<Object>,
    "product_id": "test-product",
    "sku": "test-sku",
    "title": "Test variant",
    "upc": "test-upc",
    "updated_at": Any<String>,
    "weight": null,
    "width": null,
  },
}
`;

exports[`/store/variants includes default relations 1`] = `
Object {
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": "test-barcode",
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": "test-ean",
      "height": null,
      "hs_code": null,
      "id": "test-variant",
      "inventory_quantity": 10,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": "test-variant-option",
          "metadata": null,
          "option_id": "test-option",
          "updated_at": Any<String>,
          "value": "Default variant",
          "variant_id": "test-variant",
        },
      ],
      "origin_country": null,
      "prices": Array [
        Object {
          "amount": 100,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": "test-price",
          "max_quantity": null,
          "min_quantity": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": "test-variant",
        },
      ],
      "product": Any<Object>,
      "product_id": "test-product",
      "sku": "test-sku",
      "title": "Test variant",
      "upc": "test-upc",
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
}
`;

exports[`/store/variants lists by title 1`] = `
Object {
  "variants": Array [
    Object {
      "allow_backorder": false,
      "barcode": null,
      "created_at": Any<String>,
      "deleted_at": null,
      "ean": null,
      "height": null,
      "hs_code": null,
      "id": Any<String>,
      "inventory_quantity": 12,
      "length": null,
      "manage_inventory": true,
      "material": null,
      "metadata": null,
      "mid_code": null,
      "options": Array [
        Object {
          "created_at": Any<String>,
          "deleted_at": null,
          "id": Any<String>,
          "metadata": null,
          "option_id": Any<String>,
          "updated_at": Any<String>,
          "value": "Handcrafted",
          "variant_id": Any<String>,
        },
      ],
      "origin_country": null,
      "prices": Array [
        Object {
          "amount": 100,
          "created_at": Any<String>,
          "currency_code": "usd",
          "deleted_at": null,
          "id": Any<String>,
          "max_quantity": null,
          "min_quantity": null,
          "price_list_id": null,
          "region_id": null,
          "updated_at": Any<String>,
          "variant_id": Any<String>,
        },
      ],
      "product": Any<Object>,
      "product_id": Any<String>,
      "sku": null,
      "title": "test2",
      "upc": null,
      "updated_at": Any<String>,
      "weight": null,
      "width": null,
    },
  ],
}
`;
